Update success page when no money returned

--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <h1>You have successfully bought a drink !</h1>
-    <div id="returnedMoney">
-    	<p th:text="'Money returned: '" />
-    </div>
+    <div id="returnedMoney"></div>
 		
 	<div class="buySomeDrink">		
         <a href="/searchForDrink">Buy another drink</a>
